<resources>
    <string name="app_name">GeoMob</string>
    <string name="title_activity_detail_country">DetailCountryActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">detail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="home">Home</string>
    <string name="videos">Videos</string>
    <string name="tweets">Tweets</string>
    <string name="historical_event">Historical Event</string>
    <string name="personalities">Personalities</string>
    <string name="description">Description</string>
    <string name="surface">Area</string>
    <string name="population">Population</string>
    <string name="history">History</string>
    <string name="main_resources">Main Resources</string>
    <string name="main_personalities">Main Personalities</string>
    <string name="photos">Photos</string>
</resources>
