<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    tools:context=".ui.detail.home.HomeFragment"
    android:background="@android:color/white"
    android:paddingTop="10dp"
    android:layout_marginHorizontal="6dp">


    <include
        android:id="@+id/include"
        layout="@layout/country_list_item"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="30dp" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="0.03" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="19sp"
                android:textColor="#000"
                android:layout_marginHorizontal="2dp"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                tools:ignore="WebViewLayout"
                android:layout_marginHorizontal="5dp">
                <TextView
                    android:id="@+id/description_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/surface"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginHorizontal="2dp"/>

            <TextView
                android:id="@+id/surfaceView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="#898989"
                android:textSize="16sp"
                android:layout_marginHorizontal="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/population"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginHorizontal="2dp"/>

            <TextView
                android:id="@+id/populationView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="#898989"
                android:textSize="16sp"
                android:layout_marginHorizontal="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/history"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginHorizontal="2dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerHistory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_marginHorizontal="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/main_resources"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginHorizontal="2dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerResources"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:scrollbars="horizontal"
                android:layout_marginHorizontal="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/main_personalities"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginHorizontal="2dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerPersons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:scrollbars="horizontal"
                android:layout_marginHorizontal="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/photos"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_marginHorizontal="2dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:layout_marginHorizontal="5dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerPhotos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal"
                    android:layout_marginBottom="40dp"/>
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"/>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>